<resources>
    <string name="app_name">SportzFever</string>

    <string name="message_network_problem">Please check your internet connectivity.</string>
    <string name="message_problem">Opps! Something went wrong, please try again.</string>
    <string name="problem_server">Problem connecting to server, Please try later.</string>
    <string name="some_error_occurred">Unable to connect to the service, please try again later.</string>
    <string name="timeout">Time out</string>
    <string name="no_internet_connection">No Internet connection.  Please check your network settings.</string>
    <string name="alert_internet_connection">Please check your internet connection.</string>
    <string name="hint_enter_email">Enter Email</string>
    <string name="hint_enter_password">Enter Password</string>
    <string name="hint_enter_mbno">Enter Mobile Number</string>
    <string name="hint_enter_name">Enter Name</string>
    <string name="sign_in">Sign in</string>
    <string name="log_in">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_valid_emailid">Please enter valid emailid</string>
    <string name="or">OR</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_photos_found">There are no photos or videos as of now.</string>

    <string name="enter_name">Please enter Name</string>
    <string name="enter_mb">Please enter Mobile Number</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="score">Score</string>
    <string name="matches">Matches</string>
    <string name="sportavtar">Sports Avtar</string>
    <string name="gallery">Gallery</string>
    <string name="myprofile">About</string>
    <string name="tournament">Tournament</string>
    <string name="avtarname">Avatar Name : </string>
    <string name="dob">Date of Birth : </string>
    <string name="name">Name : </string>
    <string name="gender">Gender : </string>
    <string name="avtarbattingheld">Batting Hand : </string>
    <string name="avtarjercynumber">Jersey Number : </string>
    <string name="avtarbattingstyle">Batting Style : </string>
    <string name="email">Email : </string>
    <string name="hometown">Hometown : </string>
    <string name="currentlocation">Current Location : </string>
    <string name="phnumber">phoneNumbe : </string>
    <string name="avtarbowling_style">Bowling Style : </string>
    <string name="avtarbowling_held">Bowling Hand : </string>
    <string name="avtarspeciality">Speciality : </string>
    <string name="avtarfavouritefieldposition">Favourite Field Position : </string>
    <string name="avtaraboutme">About me : </string>
    <string name="tournament_text">Welcome to SF Tournament Page. We are super excited to have you here.\nYou can click on "Find Tournaments" button below to view events happening near you area.\nYou can "Create Tournaments" by clicking on Switch To Tournament Organizer Mode button.</string>
    <string name="team_roster">Team Roster</string>
    <string name="team_roster_desc">Select which players you want for this match.SF will check with them and let you know.You can make your final lineup from available players once they have responded.\n Note:\n1. Permanent players need to be added via Player Management.\n 2. Being "Available" does not mean player is in final lineup till you make the final lineup.  </string>

    <string name="match_desc"><b>Matches</b>\nMatch is team’s public event with participation limited to only its players. Captain needs to lineup his players and can give them specific tasks. Other members of SF universe can follow this event. Team’s match is visible to all.\n\n<b>Practice</b>\nTeam’s practice is limited to team’s roster (team members). Organizer / captain may decide to not invite a team member before sending invites but no person external to team’s roster can be invited. However, even an uninvited team member will be able to view the event since he is part of the team.\n\n<b>MeetUp</b>\nA meetup is team’s internal event. All team members are invited by default. However, organizer can deselect invitees before saving the event. Since it’s a team’s internal event, rest of the SF community cannot view or follow this event. But an organizer can invite a non team member by sending specific invites irrespective of whether he /she has a relevant sports Avatar.. In such a case, the event is visible to that specific non team member also.\n\n<b>Event</b>\nTeam’s public event involves each and everyone in the SF universe. SF members can decide to either attend or just follow updates of this event. This event allows organizer to invite anyone irrespective of whether SF member has a relevant sports avatar. As per the name, these events are visible to all on Teams general profile page, calendar and other public forums. All team members are of course invited by default but organizer can remove specific team members before sending invites.</string>
    <string name="save_lineup_and_next">Save Lineup and Next</string>
    <string name="select_scorer">Select Scorer</string>
    <string name="third_scorer">Third Scorer</string>
    <string name="existing_player_message">This user is already in team roster, you can add this user from existing players list.</string>
    <string name="playing_lineup">Playing Lineup</string>
    <string name="no_ball">No Ball</string>
    <string name="wide_ball">Wide Ball</string>
    <string name="bye">Bye</string>
    <string name="leg_bye">Leg Bye</string>
    <string name="out">Out</string>
    <string name="more_options">More Options</string>
    <string name="undo">Undo</string>
    <string name="switchstriker">Switch\nStriker</string>
    <string name="drinkbreak">Drinks\nBreak</string>
    <string name="endenning">End\nInning</string>
    <string name="five">5</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="another_scorer_start_scoring_message">One of the designated match scorers, %s, has already started scoring. Either score on his device or ask him to log out for you to be able to score in your device.</string>
    <string name="please_select_run_on_legbye">PLEASE SELECT RUN SCORED ON LEGBYE.</string>
    <string name="please_select_run">PLEASE SELECT RUN SCORED.</string>
    <string name="please_select_run_on_bye">PLEASE SELECT RUN SCORED ON BYE.</string>
    <string name="please_select_out_type">PLEASE SELECT OUT TYPE.</string>
    <string name="please_select_fielder">PLEASE SELECT FIELDER.</string>
    <string name="please_select_batsman">PLEASE SELECT OUT BATSMAN.</string>
    <string name="cannot_scorer_message">You can not start inning... please ask other team scorer to login and start inning</string>
    <string name="cannot_start_inning">You can not start inning.. please ask other team scorer to login and start inning</string>
    <string name="start_second_inning">Start Second Inning</string>
    <string name="drink_break">Drinks Break</string>
    <string name="match_not_accepted">Match Not Accepted by Opponent Team Yet!!</string>
    <string name="not_authorized_scorer">You are not authorized scorer for this inning</string>
    <string name="inning1">Inning 1</string>
    <string name="inning2">Inning 2</string>
    <string name="final_score_message">Final score will have to be manually added by active scorer at the end of inning.</string>
    <string name="team_already_selected_message">Please select another team as this team is already selected as first team</string>
    <string name="matches_around_you">Matches Around You</string>
    <string name="team_around_you">Team Around You</string>
    <string name="players_around_you">Players Around You</string>
    <string name="tournaments_around_you">Tournaments Around You</string>
    <string name="friend_suggestion">Friend Suggestion</string>

</resources>
