<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.LoginActivity">

    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">



    </RelativeLayout>
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp20">

        <ImageView
            android:layout_width="@dimen/dp100"
            android:layout_height="@dimen/dp100"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dp10"
            android:layout_marginTop="@dimen/dp20"
            android:background="@drawable/ic_launcher" />

        <com.app.sportzfever.utils.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/textcolordark"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:gravity="start"
            android:hint="@string/hint_enter_name"
            android:inputType="text"
            android:padding="@dimen/dp14" />


        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="start"
            android:hint="@string/hint_enter_email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/dp14" />

        <EditText
            android:id="@+id/edtmobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="start"
            android:hint="@string/hint_enter_mbno"
            android:inputType="number"
            android:padding="@dimen/dp14" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/hint_enter_password"
            android:inputType="textPassword"
            android:padding="@dimen/dp14" />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp30"
            android:background="@color/logocolor"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_15" />


        <RelativeLayout
            android:id="@+id/rel_signin"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content">

            <com.app.sportzfever.utils.CustomTextView
                android:id="@+id/createAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="@dimen/dp10"
                android:paddingTop="@dimen/dp10"
                android:text="Existing User?"
                android:textColor="@color/textcolordark"
                android:textSize="@dimen/text_size_13" />

            <com.app.sportzfever.utils.CustomTextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/createAccount"
                android:paddingBottom="@dimen/dp10"
                android:paddingLeft="@dimen/dp10"
                android:paddingTop="@dimen/dp10"
                android:text="Sign In"
                android:textColor="@color/red"
                android:textSize="@dimen/text_size_13" />

        </RelativeLayout>





    </LinearLayout>

</RelativeLayout>
