<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"

   >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<TextView
    android:id="@+id/avtar_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/avtarname"
    android:textStyle="bold"
    android:textColor="@color/logocolor"
    android:padding="@dimen/dp10"
    /><TextView
        android:id="@+id/avtar_namelive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avtarname"
        android:layout_toRightOf="@+id/avtar_name"
        android:textStyle="bold"
        android:singleLine="true"
        android:padding="@dimen/dp10"
        />
        <TextView
            android:id="@+id/avtar_battingheld"
            android:layout_width="wrap_content"
            android:textColor="@color/logocolor"
            android:layout_below="@+id/avtar_name"
            android:text="@string/avtarbattingheld"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:padding="@dimen/dp10"
            />
        <TextView
            android:id="@+id/avtar_battingheldlive"
            android:layout_width="wrap_content"
            android:layout_below="@+id/avtar_name"
            android:layout_toRightOf="@+id/avtar_battingheld"
            android:text="@string/avtarbattingheld"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:singleLine="true"
            android:padding="@dimen/dp10"
            />

        <TextView
            android:id="@+id/avtar_jercynumber"
            android:layout_width="wrap_content"
            android:layout_below="@+id/avtar_battingheld"
            android:layout_height="wrap_content"
            android:text="@string/avtarjercynumber"
            android:textColor="@color/logocolor"
            android:textStyle="bold"
            android:padding="@dimen/dp10"
            />
        <TextView
            android:id="@+id/avtar_jercynumberlive"
            android:layout_width="wrap_content"
            android:layout_below="@+id/avtar_battingheld"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/avtar_jercynumber"
            android:text="@string/avtarjercynumber"
            android:textStyle="bold"
            android:singleLine="true"
            android:padding="@dimen/dp10"
            />
        <TextView
    android:id="@+id/avtar_battingstyle"
    android:layout_width="wrap_content"
            android:textColor="@color/logocolor"
        android:layout_below="@+id/avtar_jercynumber"
    android:layout_height="wrap_content"
        android:text="@string/avtarbattingstyle"
            android:textStyle="bold"
            android:padding="@dimen/dp10"
    />
        <TextView
            android:id="@+id/avtar_battingstylelive"
            android:layout_width="wrap_content"
            android:layout_below="@+id/avtar_jercynumber"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/avtar_battingstyle"
            android:text="@string/avtarbattingstyle"
            android:textStyle="bold"
            android:singleLine="true"
            android:padding="@dimen/dp10"
            />
        <TextView
            android:id="@+id/avtar_bowlingstyle"
            android:layout_width="wrap_content"
            android:layout_below="@+id/avtar_battingstyle"
            android:layout_height="wrap_content"
            android:text="@string/avtarbowling_style"
            android:textStyle="bold"
            android:textColor="@color/logocolor"
            android:padding="@dimen/dp10"
            />
        <TextView
            android:id="@+id/avtar_bowlingstylelive"
            android:layout_width="wrap_content"
            android:layout_below="@+id/avtar_battingstyle"
            android:layout_height="wrap_content"

            android:layout_toRightOf="@+id/avtar_bowlingstyle"
            android:text="@string/avtarbowling_style"
            android:textStyle="bold"
            android:singleLine="true"
            android:padding="@dimen/dp10"
            />
        <TextView
            android:id="@+id/avtar_bowlinghand"
            android:layout_width="wrap_content"
            android:textColor="@color/logocolor"
            android:layout_below="@+id/avtar_bowlingstyle"
            android:layout_height="wrap_content"
            android:text="@string/avtarbowling_held"
            android:textStyle="bold"
            android:padding="@dimen/dp10"
            />
        <TextView
            android:id="@+id/avtar_bowlinghandlive"
            android:layout_width="wrap_content"
            android:layout_below="@+id/avtar_bowlingstyle"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/avtar_bowlinghand"
            android:text="@string/avtarbowling_held"
            android:textStyle="bold"
            android:singleLine="true"
            android:padding="@dimen/dp10"
            />
        <TextView
    android:id="@+id/avtar_speciality"
    android:layout_width="wrap_content"
            android:layout_below="@+id/avtar_bowlinghand"
            android:text="@string/avtarspeciality"
    android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/logocolor"
            android:padding="@dimen/dp10"
    />

        <TextView
            android:id="@+id/avtar_specialitylive"
            android:layout_width="wrap_content"
            android:layout_below="@+id/avtar_bowlinghand"
            android:text="@string/avtarspeciality"

            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/avtar_speciality"
            android:textStyle="bold"
            android:singleLine="true"
            android:padding="@dimen/dp10"
            />
        <TextView
    android:id="@+id/avtar_favouritefieldposition"
    android:layout_width="wrap_content"
            android:textColor="@color/logocolor"
        android:layout_below="@+id/avtar_speciality"
        android:text="@string/avtarfavouritefieldposition"
    android:layout_height="wrap_content"
        android:textStyle="bold"
        android:padding="@dimen/dp10"
    />
        <TextView
            android:id="@+id/avtar_favouritefieldpositionlive"
            android:layout_width="wrap_content"
            android:layout_below="@+id/avtar_speciality"
            android:layout_toRightOf="@+id/avtar_favouritefieldposition"
            android:text="@string/avtarfavouritefieldposition"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:singleLine="true"
            android:padding="@dimen/dp10"
            />
        <TextView
    android:id="@+id/avtar_aboutme"
    android:layout_width="wrap_content"
            android:layout_below="@+id/avtar_favouritefieldposition"
            android:text="@string/avtaraboutme"
            android:textStyle="bold"
            android:padding="@dimen/dp10"
            android:textColor="@color/logocolor"
    android:layout_height="wrap_content"
    />
        <TextView
            android:id="@+id/avtar_aboutmelive"
            android:layout_width="wrap_content"
            android:layout_below="@+id/avtar_favouritefieldposition"
            android:text="@string/avtaraboutme"

            android:layout_toRightOf="@+id/avtar_aboutme"
            android:textStyle="bold"
            android:padding="@dimen/dp10"
            android:layout_height="wrap_content"
            />
    </RelativeLayout>

</RelativeLayout>
