<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        android:id="@+id/main_view"
        layout="@layout/app_bar_dashboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_dashboard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/nav_header_height"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_matches"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:paddingBottom="@dimen/dp15"
                android:paddingLeft="@dimen/dp_50"
                android:paddingTop="@dimen/dp15"
                android:text="@string/matches"
                android:textColor="@color/textcolordark"
                android:textSize="@dimen/text_size_17" />

            <TextView
                android:id="@+id/text_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dp15"
                android:paddingLeft="@dimen/dp_50"
                android:paddingTop="@dimen/dp15"
                android:text="@string/score"
                android:textColor="@color/textcolordark"
                android:textSize="@dimen/text_size_17" />

            <TextView
                android:id="@+id/text_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dp15"
                android:paddingLeft="@dimen/dp_50"
                android:paddingTop="@dimen/dp15"
                android:text="@string/logout"
                android:textColor="@color/textcolordark"
                android:textSize="@dimen/text_size_17" />


        </LinearLayout>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
